[gd_scene load_steps=18 format=2]

[ext_resource path="res://http/http-scene/UFO.gd" type="Script" id=1]
[ext_resource path="res://fonts/pixel-font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://http/http-scene/space.png" type="Texture" id=3]
[ext_resource path="res://http/http-scene/ufo.png" type="Texture" id=4]
[ext_resource path="res://http/http-scene/HttpScene.gd" type="Script" id=5]
[ext_resource path="res://http/http-scene/thumbs-down.png" type="Texture" id=6]
[ext_resource path="res://http/http-scene/thumbs-up.png" type="Texture" id=7]
[ext_resource path="res://http/http-scene/stars-and-sines.wav" type="AudioStream" id=8]
[ext_resource path="res://http/http-scene/bleep-success.mp3" type="AudioStream" id=9]
[ext_resource path="res://http/http-scene/buzzer-fail.wav" type="AudioStream" id=10]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = ExtResource( 2 )

[node name="HttpScene" type="Node2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 168, 168 )
scale = Vector2( 5.375, 5.375 )
frames = SubResource( 5 )
frame = 2
playing = true
flip_v = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 512, 168 )
scale = Vector2( 5.375, 5.375 )
frames = SubResource( 5 )
frame = 2
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 855, 168 )
scale = Vector2( 5.375, 5.375 )
frames = SubResource( 5 )
frame = 2
playing = true
flip_v = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 168, 512 )
scale = Vector2( 5.375, 5.375 )
frames = SubResource( 5 )
frame = 1
playing = true
flip_h = true
flip_v = true

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
position = Vector2( 512, 512 )
scale = Vector2( 5.375, 5.375 )
frames = SubResource( 5 )
frame = 1
playing = true
flip_h = true

[node name="AnimatedSprite6" type="AnimatedSprite" parent="."]
position = Vector2( 856, 512 )
scale = Vector2( 5.375, 5.375 )
frames = SubResource( 5 )
playing = true
flip_v = true

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Title" type="Label" parent="Control"]
margin_top = 100.0
margin_right = 1024.0
custom_fonts/font = SubResource( 6 )
text = "Sending HTTP request..."
align = 1

[node name="SuccessMessage" type="Label" parent="Control"]
visible = false
margin_top = 490.0
margin_right = 1024.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0.654902, 1, 0.556863, 1 )
custom_fonts/font = SubResource( 7 )
text = "Success! Press spacebar to continue..."
align = 1

[node name="FailureMessage" type="Label" parent="Control"]
visible = false
margin_top = 490.0
margin_right = 1024.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0.992157, 0.443137, 0.443137, 1 )
custom_fonts/font = SubResource( 7 )
text = "Failure! Press spacebar to quit..."
align = 1

[node name="UFO" type="Sprite" parent="."]
position = Vector2( 512, 280 )
scale = Vector2( 0.388889, 0.388889 )
texture = ExtResource( 4 )
script = ExtResource( 1 )

[node name="ThumbsUp" type="Sprite" parent="."]
visible = false
position = Vector2( 504, 312 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="ThumbsDown" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 320 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="StarsAndSines" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="BleepSuccess" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="BuzzerFailure" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
